--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lol-mood",
   "version": "0.1.0",
+  "homepage" : ".",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -11,10 +12,12 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-switch-button-react": "^1.2.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
