--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lol-mood",
   "version": "0.1.0",
-  "homepage" : ".",
+  "homepage" : "./",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
